--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,8 @@ jobs:
         experimental: [ false ]
     steps:
 
+      - uses: actions/checkout@v3
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
